Reconfig webpack and babel, add new modules, work with webpack-dev-server

--- a/babel.config.json
+++ b/babel.config.json
@@ -1,5 +1,19 @@
 {
     "presets":[
-        "@babel/preset-env"
+        [
+            "@babel/preset-env",
+            {
+                "useBuiltIns": "entry",
+                "corejs": 2
+            }
+        ]     
+    ],
+    "plugins": [
+        [
+            "@babel/plugin-proposal-object-rest-spread",
+            { 
+                "loose": true, "useBuiltIns": true
+            }
+        ]
     ]
 }
