--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "testing",
+  "name": "canas-lazy-update",
   "version": "1.0.0",
   "description": "",
-  "main": "gl-matrix.js",
-  "mode": "",
+  "main": "src/index.js",
+  "mode": "development",
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
@@ -21,17 +21,21 @@
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "babel-loader": "^8.1.0",
+    "browser-sync": "^2.26.12",
+    "browser-sync-webpack-plugin": "^2.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.0",
     "cssnano": "^4.1.10",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "worker-loader": "^3.0.0"
   }
 }
