--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "cross-env MODE=production webpack",
-    "start": "cross-env MODE=development webpack && npm run dev",
-    "dev": "cross-env MODE=dev-server webpack-dev-server --hot",
+    "start": "cross-env MODE=dev-server webpack-dev-server --hot",
     "analyze": "cross-env MODE=analyze webpack"
   },
   "keywords": [],
@@ -20,6 +19,7 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/plugin-transform-spread": "^7.11.0",
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "babel-loader": "^8.1.0",
